[package]
name = "libnoise"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "*"
rand = "*"
itertools = "*"
image = "*"

[dev-dependencies]
criterion = "*"
plotters = "*"
itertools = "*"
proptest = "*"
tempdir = "*"

[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[[test]]
name = "test_sources"

[[test]]
name = "test_adapters"

[[bench]]
name = "billow"
harness = false

[[bench]]
name = "checkerboard"
harness = false

[[bench]]
name = "fbm"
harness = false

[[bench]]
name = "improved_perlin"
harness = false

[[bench]]
name = "perlin"
harness = false

[[bench]]
name = "ridgedmulti"
harness = false

[[bench]]
name = "simplex"
harness = false

[[bench]]
name = "value"
harness = false

[[bench]]
name = "worley"
harness = false

[[example]]
name = "billow"

[[example]]
name = "chaining"

[[example]]
name = "checkerboard"

[[example]]
name = "custom"

[[example]]
name = "fbm"

[[example]]
name = "improved_perlin"

[[example]]
name = "perlin"

[[example]]
name = "ridgedmulti"

[[example]]
name = "simplex"

[[example]]
name = "value"

[[example]]
name = "worley"
