[package]
name = "libnoise"
version = "0.1.0"
authors = ["Contributors to the libnoise-rs Repository"]
edition = "2021"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/libnoise"
repository = "https://github.com/cookiephone/libnoise-rs"
homepage = "https://github.com/cookiephone/libnoise-rs"
description = "A simple, performant, and customizable procedural noise generation library."
keywords = ["noise", "procedural", "perlin", "simplex", "worley"]
categories = ["algorithms", "mathematics", "game-development", "graphics"]
include = ["LICENSE.md", "README.md"]

[lib]
name = "libnoise"

[features]
dev-tools = ["dep:criterion"]

[dependencies]
num-traits = "*"
rand = "*"
itertools = "*"
image = "*"
criterion = { version = "*", optional = true }

[dev-dependencies]
libnoise = { path = ".", features = ["dev-tools"] }
criterion = "*"
plotters = "*"
itertools = "*"
proptest = "*"
tempdir = "*"

[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[[test]]
name = "test_sources"

[[test]]
name = "test_adapters"

[[bench]]
name = "billow"
harness = false

[[bench]]
name = "checkerboard"
harness = false

[[bench]]
name = "fbm"
harness = false

[[bench]]
name = "improved_perlin"
harness = false

[[bench]]
name = "perlin"
harness = false

[[bench]]
name = "ridgedmulti"
harness = false

[[bench]]
name = "simplex"
harness = false

[[bench]]
name = "value"
harness = false

[[bench]]
name = "worley"
harness = false

[[example]]
name = "billow"

[[example]]
name = "chaining"

[[example]]
name = "checkerboard"

[[example]]
name = "custom"

[[example]]
name = "fbm"

[[example]]
name = "improved_perlin"

[[example]]
name = "perlin"

[[example]]
name = "ridgedmulti"

[[example]]
name = "simplex"

[[example]]
name = "value"

[[example]]
name = "worley"
