[package]
name = "libnoise"
version = "1.0.0"
authors = ["Contributors to the libnoise-rs Repository"]
edition = "2021"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/libnoise"
repository = "https://github.com/cookiephone/libnoise-rs"
homepage = "https://github.com/cookiephone/libnoise-rs"
description = "A simple, performant, and customizable procedural noise generation library."
keywords = ["noise", "procedural", "perlin", "simplex", "worley"]
categories = ["algorithms", "mathematics", "game-development", "graphics"]

[features]
dev-tools = ["dep:criterion"]

[dependencies]
num-traits = "0.2.16"
rand_chacha = { version = "0.3.1" }
rand = { version = "0.8.5", features = [], default-features = false }
itertools = "0.10.5"
image = { version = "0.24.6", features = ["gif"], default-features = false, optional = true }
criterion = { version = "0.5.1", optional = true }

[dev-dependencies]
libnoise = { path = ".", features = ["dev-tools", "image"] }
criterion = "0.5.1"
plotters = "0.3.5"
itertools = "0.10.5"
proptest = "1.2.0"
tempdir = "0.3.7"

[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[[test]]
name = "test_sources"

[[test]]
name = "test_adapters"

[[test]]
name = "test_utils"

[[bench]]
name = "billow"
harness = false

[[bench]]
name = "checkerboard"
harness = false

[[bench]]
name = "fbm"
harness = false

[[bench]]
name = "improved_perlin"
harness = false

[[bench]]
name = "perlin"
harness = false

[[bench]]
name = "ridgedmulti"
harness = false

[[bench]]
name = "simplex"
harness = false

[[bench]]
name = "value"
harness = false

[[bench]]
name = "worley"
harness = false

[[example]]
name = "billow"

[[example]]
name = "chaining"

[[example]]
name = "checkerboard"

[[example]]
name = "custom"

[[example]]
name = "fbm"

[[example]]
name = "improved_perlin"

[[example]]
name = "perlin"

[[example]]
name = "ridgedmulti"

[[example]]
name = "simplex"

[[example]]
name = "value"

[[example]]
name = "worley"
